# dep-cm-factor-simulator

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/dep_cm_sim/: cell_templates.py  condition_optimizer.py  demo_plot.py  equations.py  error_evaluation.py  experimental_data.py  optimization.py  paper_conditions.py  parameter_io.py  plotter.py  reproduce_paper_figure.py
src/dep_cm_sim/gui/: experimental_data_window.py  graph_window.py  parameter_window.py
tests/: test_cell_templates.py  test_condition_optimizer.py  test_equations.py  test_error_evaluation.py  test_experimental_data.py  test_optimization.py  test_parameter_io.py
