[project]
name = "dep-cm-factor-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[project.scripts]
dep-cm-sim = "dep_cm_sim.gui.parameter_window:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dep_cm_sim"]

[tool.uv]
package = true
